algo/.gitlab-ci.yml: Can't test GCC12 and 13 yet.
See #5522

--- a/algo/.gitlab-ci-compilers.yml
+++ b/algo/.gitlab-ci-compilers.yml
@@ -52,7 +52,7 @@ gcc:
     - .testing-gcc
   parallel:
     matrix:
-      - GCC_VERSION: ["7.5", "8", "9", "10", "11", "12", "13"]
+      - GCC_VERSION: ["7.5", "8", "9", "10", "11"]
 
 clang:
   extends:
