--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -256,6 +256,7 @@ test_server_unit:
       - python3 -m pip install -U pip
       - python3 -m pip install --no-cache -r server/unit_requirements.txt
       - mkdir -p /mnt/upload/uploads/
+      - wget http://www.vidjil.org/releases/vidjil-latest_x86_64 && mv vidjil-latest_x86_64 vidjil-algo && chmod +x vidjil-algo
       - make unit_server
     coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
     artifacts:
