Add cors management for /cgi

--- a/docker/vidjil-client/conf/client_location.conf
+++ b/docker/vidjil-client/conf/client_location.conf
@@ -36,6 +36,9 @@ location /cgi/ {
     include /etc/nginx/fastcgi_params;
     # Adjust non standard parameters (SCRIPT_FILENAME)
     fastcgi_param SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+
+    # Allow call from cross origins for cgi (including for testing purpose)
+    add_header 'Access-Control-Allow-Origin' '*';
 }
 
 location /analyze {
