Resolve "workers concurrency settable by .env"

--- a/docker/.env-default
+++ b/docker/.env-default
@@ -28,9 +28,14 @@ PRODUCTION=false
 SERVICE_PREFIX_NAME=dev
 
 
-# Number of uwsgi threads to use (by default 6 if not declared)
-# If you make some work on code, you can change it to 1 to get all threads similar when you relaunch application 
+### Number of uwsgi threads to use (by default 6 if not declared)
+### If you make some work on code, you can change it to 1 to get all threads similar when you relaunch application 
 # UWSGI_POOL=1
+
+### Workers pool can be set with value of WORKERS_POOL. If setted to "false" (default), pool will be equal to number of available threads minus 1. 
+### An automatic check and set will be done at launch to keep value not execeding your number of threads minus 1.
+# Set to 0 to get default pool number configuration (number of threads minus 1)
+# WORKERS_POOL = 0  
 #############################
 # Don't change these values
 MYSQL_DATABASE=vidjil
