--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -173,8 +173,7 @@ copy_release:
         scp algo/releases/vidjil-algo*.tar.gz algo/releases/vidjil-algo*/vidjil-algo-*_* $repo
       done
       release_name=$(cat algo/release)
-      ssh $VIDJIL_WWW "cd /var/www/html/releases; ln -sf vidjil-algo-${release_name}.tar.gz vidjil-algo-latest.tgz; ln -sf vidjil-algo-${release_name}_x86_64 vidjil-algo-latest_x86_64"
-      ssh $VIDJIL_BONSAI "cd /bio1/www/html/vidjil; scp vidjil-algo-${release_name}* $VIDJIL_BONSAI_PROD:/bio1/www/html/vidjil"
+      ssh $VIDJIL_WWW "cd /var/www/static/releases; ln -sf vidjil-algo-${release_name}.tar.gz vidjil-algo-latest.tar.gz; ln -sf vidjil-algo-${release_name}_x86_64 vidjil-algo-latest_x86_64"
   when: manual
   only:
     - /^feature-.*a.*\/release$/
