workers; install pandas as needed for calib preprocess

--- a/docker/vidjil-server/Dockerfile
+++ b/docker/vidjil-server/Dockerfile
@@ -19,7 +19,8 @@ RUN apt-get update ; apt-get install --no-install-recommends --no-install-sugges
 	pip3 install --upgrade pip && \
 	pip3 install flower && \
 	pip3 install coverage && \
-    pip3 install -U py4web
+    pip3 install -U py4web && \
+    pip3 install pandas
 
 # SET PYTHON3 AS DEFAULT PYTHON
 RUN rm -Rf /usr/bin/python
