--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,20 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "cSpell.words": [
+        "airr",
         "atwho",
+        "Clonality",
         "clonotype",
         "genescan",
         "germline",
+        "germlines",
         "ijson",
+        "jsontransformer",
+        "noclass",
+        "ombott",
         "Pielou",
+        "pydal",
+        "recombinations",
         "sampleset",
         "yatl",
         "zmodel"
