cypress 12.9: convert our cypress pipeline to new version
Need to rename spec files (xxx.cy.js); need to change some path for data file

Besed on cypress 12.9 (1y old) that we already use on a previous test. Can be after that updated to a more recent version.

--- a/docker/ci/Dockerfile
+++ b/docker/ci/Dockerfile
@@ -5,13 +5,11 @@ LABEL version="0.2"
 ### See also doc/user.md and BROWSER_COMPATIBILITY in browser/js/model.js
 LABEL description="An Cypress based docker image which comes with cypress pipeline and various browsers version.\
 Versions: \
-    Firefox: 62 (legacy), 78 (supported), 89 (latest) \
-    Chromium: 75 (legacy), 79 (supported), 93 (latest)"
+    Firefox: 86 (legacy), 102 (supported, ESR), 112 (latest) \
+    Chromium: 80 (legacy), 93 (supported), 111 (latest)"
+
 
 WORKDIR /app
-COPY  cypress.json .
-COPY  package.json .
-COPY  cypress_script.bash script.bash
 
 ##################################
 ### Update and install ressources
@@ -28,26 +26,36 @@ RUN apt-get update && apt-get install --no-install-recommends --no-install-sugge
 ### download browsers
 ######################
 # https://chromium.cypress.io/; allow to get old versions of chromium
-RUN curl -Lo firefox_latest.tar.bz2 'https://download.mozilla.org/?product=firefox-latest&os=linux64&lang=en-US' &&\
+## Latests (~firefox 112, Chromium 111/rev 1109224, as April 2023)
+## legacy version of browser (firefox 86, chromium 80/rev 722276, minimal for cypress)
+## Supported version (firefox 102 ESR, Chromium 100/rev 972774 ~ same release date beginning 2022)
+
+RUN curl -Lo firefox_latest.tar.bz2 'https://download-installer.cdn.mozilla.net/pub/firefox/releases/112.0/linux-x86_64/fr/firefox-112.0.tar.bz2' &&\
  tar -xjf firefox_latest.tar.bz2 &&\
  mv firefox browsers/firefox_latest &&\
- wget -q http://commondatastorage.googleapis.com/chromium-browser-snapshots/Linux_x64/886661/chrome-linux.zip -O chrome-latest.zip &&\
+ wget -q http://commondatastorage.googleapis.com/chromium-browser-snapshots/Linux_x64/1109220/chrome-linux.zip -O chrome-latest.zip &&\
  unzip -q chrome-latest.zip &&\
  mv  chrome-linux browsers/chrome_latest &&\
 
- wget -q https://ftp.mozilla.org/pub/firefox/releases/62.0/linux-x86_64/fr/firefox-62.0.tar.bz2 -O firefox-legacy.tar.bz2 &&\
+ wget -q https://ftp.mozilla.org/pub/firefox/releases/86.0/linux-x86_64/fr/firefox-86.0.tar.bz2 -O firefox-legacy.tar.bz2 &&\
  tar -xjf firefox-legacy.tar.bz2 && mv firefox browsers/firefox_legacy &&\
- wget -q http://commondatastorage.googleapis.com/chromium-browser-snapshots/Linux_x64/652428/chrome-linux.zip -O chrome-legacy.zip &&\
+ wget -q http://commondatastorage.googleapis.com/chromium-browser-snapshots/Linux_x64/722276/chrome-linux.zip -O chrome-legacy.zip &&\
  unzip -q chrome-legacy.zip &&\
  mv  chrome-linux browsers/chrome_legacy &&\
 
- wget -q https://ftp.mozilla.org/pub/firefox/releases/78.0/linux-x86_64/fr/firefox-78.0.tar.bz2 -O firefox-supported.tar.bz2 &&\
+ wget -q https://download-installer.cdn.mozilla.net/pub/firefox/releases/102.10.0esr/linux-x86_64/fr/firefox-102.10.0esr.tar.bz2 -O firefox-supported.tar.bz2 &&\
  tar -xjf firefox-supported.tar.bz2 && mv firefox browsers/firefox_supported &&\
- wget -q http://commondatastorage.googleapis.com/chromium-browser-snapshots/Linux_x64/706915/chrome-linux.zip -O chrome-supported.zip &&\
+ wget -q http://commondatastorage.googleapis.com/chromium-browser-snapshots/Linux_x64/972774/chrome-linux.zip -O chrome-supported.zip &&\
  unzip -q chrome-supported.zip &&\
  mv  chrome-linux browsers/chrome_supported &&\
 
  rm chrome-legacy.zip chrome-supported.zip chrome-latest.zip  firefox-legacy.tar.bz2 firefox-supported.tar.bz2  firefox_latest.tar.bz2
+
+
+COPY  cypress.config.js .
+COPY  package.json .
+COPY  cypress_script.bash script.bash
+
 
 
 RUN npm i cypress && $(npm bin)/cypress verify
