--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 
 .test_cypress_base:
-  image: registry.gitlab.inria.fr/vidjil/vidjil/cypress_with_browsers:latest
+  image: vidjilci/cypress_with_browsers:12.9
   stage: test_cypress_client
   # extends:
     # - .need_for_staged_client
@@ -19,7 +19,7 @@
     BROWSER: ../electron
     CYPRESS_PATH: browser/test/cypress
     HOST: html
-    TEST_FILES: "/app/cypress/integration/test_*.js"
+    TEST_FILES: "/app/cypress/e2e/test_*.js"
   artifacts:
     reports:
       junit: $CYPRESS_PATH/reports/test-cypress-*.xml
@@ -42,7 +42,7 @@
   extends:
     - .test_cypress_base
   variables:
-    TEST_FILES: "/app/cypress/integration/external_*.js"
+    TEST_FILES: "/app/cypress/e2e/external_*.js"
 
 
 ## cypress client
@@ -103,7 +103,7 @@ external2:
     - .test_cypress_base
   variables:
     PATH_CYPRESS: browser/test/cypress/integration/
-    TEST_FILES: "/app/cypress/integration/doc_*.js"
+    TEST_FILES: "/app/cypress/e2e/doc_*.js"
   before_script:
     - apt-get update && apt-get -y install pandoc
     - make -C doc/tutorial/ build_tutorial_cypress_client
@@ -131,7 +131,7 @@ tuto-c2:
     matrix:
       - BROWSER: [
           firefox_latest/firefox,
-          # firefox_legacy/firefox, # not working for the moment on certain tests
+          firefox_legacy/firefox, # not working for the moment on certain tests
           chrome_supported/chrome,
           chrome_latest/chrome,
           chrome_legacy/chrome
