--- a/doc/tutorial/Makefile
+++ b/doc/tutorial/Makefile
@@ -12,9 +12,9 @@ $(HTML): %.html: %.tex
 
 
 build_tutorial_cypress_client: *.tex
-	pandoc --lua-filter extract-code.lua tutorial-vidjil-browser.tex -o /dev/null > doc_tutorial_client.js
-	mv doc_tutorial_client.js ../../browser/test/cypress/integration/doc_tutorial_client.js
+	pandoc --lua-filter extract-code.lua tutorial-vidjil-browser.tex -o /dev/null > doc_tutorial_client.cy.js
+	mv doc_tutorial_client.cy.js ../../browser/test/cypress/e2e/doc_tutorial_client.cy.js
 
 build_tutorial_cypress_server: *.tex
-	pandoc --lua-filter extract-code.lua tutorial-vidjil-server.tex -o /dev/null > doc_tutorial_server.js
-	mv doc_tutorial_server.js ../../server/py4web/apps/vidjil/tests/cypress/integration/doc_tutorial_server.js
+	pandoc --lua-filter extract-code.lua tutorial-vidjil-server.tex -o /dev/null > doc_tutorial_server.cy.js
+	mv doc_tutorial_server.cy.js ../../server/web2py/applications/vidjil/tests/cypress/e2e/doc_tutorial_server.cy.js
