--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -3,13 +3,12 @@
   stage: test_cypress_server
   extends:
     - .test_server_base_dind
-    # - .need_for_staged_server
   script: &test_cypress_server_script
     - docker exec vidjil-uwsgi  chmod a+w /usr/share/vidjil/server/py4web/apps/vidjil/errors
     - docker exec vidjil-uwsgi  chown www-data -R /mnt/upload/uploads/ /mnt/result/results
     - mkdir -p logs/before; for service in mysql fuse uwsgi workers flower nginx; do docker logs vidjil-${service} > logs/before/${service}.log 2>&1; done
     - echo "TIME $(date) - Before pulling cypress docker image" >> time.log
-    - docker pull "registry.gitlab.inria.fr/vidjil/vidjil/cypress_with_browsers:latest"
+    - docker pull "vidjilci/cypress_with_browsers:12.9"
     - echo "TIME $(date) - After pulling cypress docker image" >> time.log
     - >
       docker run
@@ -46,7 +45,7 @@
   variables:
     CYPRESS_PATH: server/py4web/apps/vidjil/tests/cypress
     HOST: local
-    TEST_FILES: "/app/cypress/integration/test_*.js"
+    TEST_FILES: "/app/cypress/e2e/test_*.js"
   only: &onlyServerBranches
     - /^feature-.*s.*\/.*$/
     - /^hotfix-.*s.*\/.*$/
@@ -75,15 +74,9 @@ s2:
           firefox_latest/firefox,
           firefox_legacy/firefox,
           chrome_supported/chrome,
-          #chrome_latest/chrome,
+          chrome_latest/chrome,
           chrome_legacy/chrome
         ]
-s2-fail:
-  extends:
-    - .test_cypress_server
-  variables:
-    BROWSER: chrome_latest/chrome
-  allow_failure: true
 
 
 ## Cypress TUTORIAL with server
@@ -95,7 +88,7 @@ s2-fail:
     - make -C doc/tutorial/ build_tutorial_cypress_server
     - *test_cypress_server_script
   variables:
-    TEST_FILES: "/app/cypress/integration/doc_*.js"
+    TEST_FILES: "/app/cypress/e2e/doc_*.js"
 
 
 tuto-s1-ff-supported:
@@ -120,14 +113,6 @@ tuto-s2:
           firefox_latest/firefox,
           firefox_legacy/firefox,
           chrome_supported/chrome,
-          #chrome_latest/chrome,
+          chrome_latest/chrome,
           chrome_legacy/chrome
         ]
-
-tuto-s2-fail:
-  extends:
-    - .tuto-server
-    - .need_for_late_server
-  variables:
-    BROWSER: chrome_latest/chrome
-  allow_failure: true
