new cypress; use image stored in gitlab registry

--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -8,7 +8,7 @@
     - docker exec vidjil-uwsgi  chown www-data -R /mnt/upload/uploads/ /mnt/result/results
     - mkdir -p logs/before; for service in mysql fuse uwsgi workers flower nginx; do docker logs vidjil-${service} > logs/before/${service}.log 2>&1; done
     - echo "TIME $(date) - Before pulling cypress docker image" >> time.log
-    - docker pull "vidjilci/cypress_with_browsers:12.9"
+    - docker pull "registry.gitlab.inria.fr/vidjil/vidjil/cypress_with_browsers:12.9"
     - echo "TIME $(date) - After pulling cypress docker image" >> time.log
     - >
       docker run
