--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 
 .test_cypress_base:
-  image: vidjilci/cypress_with_browsers:12.9
+  image: registry.gitlab.inria.fr/vidjil/vidjil/cypress_with_browsers:12.9
   stage: test_cypress_client
   # extends:
     # - .need_for_staged_client
