--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -5,9 +5,9 @@
     - .test_server_base_dind
     # - .need_for_staged_server
   script: &test_cypress_server_script
-    - docker exec docker_uwsgi_1  chmod a+w /usr/share/vidjil/server/py4web/apps/vidjil/errors
-    - docker exec docker_uwsgi_1  chown www-data -R /mnt/upload/uploads/ /mnt/result/results
-    - mkdir -p logs/before; for service in mysql fuse uwsgi workers flower nginx; do docker logs docker_${service}_1  > logs/before/${service}.log 2>&1; done
+    - docker exec vidjil-uwsgi  chmod a+w /usr/share/vidjil/server/py4web/apps/vidjil/errors
+    - docker exec vidjil-uwsgi  chown www-data -R /mnt/upload/uploads/ /mnt/result/results
+    - mkdir -p logs/before; for service in mysql fuse uwsgi workers flower nginx; do docker logs vidjil-${service} > logs/before/${service}.log 2>&1; done
     - echo "TIME $(date) - Before pulling cypress docker image" >> time.log
     - docker pull "registry.gitlab.inria.fr/vidjil/vidjil/cypress_with_browsers:latest"
     - echo "TIME $(date) - After pulling cypress docker image" >> time.log
