--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
 enum34==1.1.6
 funcsigs==1.0.2
-mock==2.0.0
 pbr==3.1.1
 requests==2.20.0
 six==1.11.0
-unittest-xml-reporting==2.1.1
 uWSGI==2.0.15
 ijson==2.3
 cffi==1.11.5
 python-ldap==3.3.1
-beautifulsoup4==4.9.3
+
+beautifulsoup4==4.11.1
+pandas
 tabulate==0.8.10
+
+py4web == 1.20240428.1
+pydal
+celery==5.2.7
+bs4==0.0.1
+ombott==2.0
+
+setuptools
+setuptools-rust
+wheel
+renoir==1.5.2 
+rocket3
+markdown 
+flower
