--- a/docker/vidjil-server/Dockerfile
+++ b/docker/vidjil-server/Dockerfile
@@ -4,13 +4,13 @@ LABEL version="1.1"
 LABEL description="An Ubuntu based docker image which comes \
 with a full installation of the Vidjil algorithm and browser/server."
 
-COPY ./requirements.txt ./requirements.txt
+COPY ../../requirements.txt ./requirements.txt
 
 #INSTALL REQUIREMENTS
 RUN apt-get update ; apt-get install --no-install-recommends --no-install-suggests -y ca-certificates wget cron unzip make git python python3.8 python3-pip python3-dev python3-gdbm python3-setuptools uwsgi-src uuid-dev libcap-dev libpcre3-dev gcc memcached htop nano libffi-dev gosu && \
     service memcached restart && \
 	pip3 install --upgrade pip && \
-	pip3 install -r requirements.txt
+	pip3 install -r ./requirements.txt
 
 # SET PYTHON3 AS DEFAULT PYTHON
 RUN rm -Rf /usr/bin/python
