requirements.txt: update and remove useless and broken packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,17 @@
-enum34==1.1.6
-funcsigs==1.0.2
-pbr==3.1.1
-requests==2.20.0
-six==1.11.0
-uWSGI==2.0.15
-ijson==2.3
-cffi==1.11.5
-python-ldap==3.3.1
-
-beautifulsoup4==4.11.1
-pandas
-tabulate==0.8.10
-
-py4web == 1.20240428.1
-pydal
-celery==5.2.7
-bs4==0.0.1
-ombott==2.0
-
 setuptools
 setuptools-rust
 wheel
 renoir==1.5.2 
-rocket3
 markdown 
 flower
+uwsgi
+py4web == 1.20240428.1
+celery
+
+
+requests==2.20.0
+ijson==2.3
+beautifulsoup4
+pandas
+tabulate==0.8.10
+
