Fix some typos and md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,17 +10,27 @@
         "atwho",
         "Clonality",
         "clonotype",
+        "clonotypes",
+        "fasta",
+        "fastq",
         "genescan",
         "germline",
         "germlines",
         "ijson",
+        "IMGT",
+        "imputability",
         "jsontransformer",
+        "Kmer",
         "noclass",
         "ombott",
         "Pielou",
+        "preprocess",
         "pydal",
         "recombinations",
         "sampleset",
+        "scatterplot",
+        "transcriptome",
+        "uwsgi",
         "yatl",
         "zmodel"
     ]
