Doc and changelog review

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "cSpell.words": [
         "airr",
         "atwho",
+        "bioinformaticians",
         "Clonality",
         "clonotype",
         "clonotypes",
@@ -16,14 +17,17 @@
         "genescan",
         "germline",
         "germlines",
+        "hypermutations",
         "ijson",
         "IMGT",
         "imputability",
+        "Intron",
         "jsontransformer",
         "Kmer",
         "noclass",
         "ombott",
         "Pielou",
+        "polyclonal",
         "preprocess",
         "pydal",
         "recombinations",
