--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "atwho",
         "Clonality",
         "clonotype",
+        "Clonotypes",
         "genescan",
         "germline",
         "germlines",
