--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -14,12 +14,13 @@
     - bash docker/ci/script_preprocess.bash
     - cd /app
     - export BROWSER=browsers/$BROWSER
-    - bash script.bash $TEST_FILES
+    - echo "TEST_FILES_PATTERN - $TEST_FILES_PATTERN"
+    - bash script.bash "$TEST_FILES_PATTERN"
   variables:
     BROWSER: ../electron
     CYPRESS_PATH: browser/test/cypress
     HOST: html
-    TEST_FILES: "/app/cypress/e2e/test_*.js"
+    TEST_FILES_PATTERN: "/app/cypress/e2e/test_*.js"
   artifacts:
     reports:
       junit: $CYPRESS_PATH/reports/test-cypress-*.xml
@@ -42,7 +43,7 @@
   extends:
     - .test_cypress_base
   variables:
-    TEST_FILES: "/app/cypress/e2e/external_*.js"
+    TEST_FILES_PATTERN: "/app/cypress/e2e/external_*.js"
 
 
 ## cypress client
@@ -103,7 +104,7 @@ external2:
     - .test_cypress_base
   variables:
     PATH_CYPRESS: browser/test/cypress/integration/
-    TEST_FILES: "/app/cypress/e2e/doc_*.js"
+    TEST_FILES_PATTERN: "/app/cypress/e2e/doc_*.js"
   before_script:
     - apt-get update && apt-get -y install pandoc
     - make -C doc/tutorial/ build_tutorial_cypress_client
